@@ -1,5 +1,7 @@
 2008-02-24  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rb_cairo_surface.c: worked with cairo >= 1.2.0.
+
 	* src/rb_cairo_context.c: fixed declaration position.
 
 	* extconf.rb: RUBY_ -> RB_.
